--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.13.1",
+    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-json-error": "^3.1.2",
     "@types/koa__router": "^8.0.4",
     "@types/lodash": "^4.14.168",
@@ -51,6 +52,7 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-json-error": "^3.1.2",
     "koa-jwt": "^4.0.0",
     "lodash": "^4.17.21",
