--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.13.1",
@@ -35,20 +35,20 @@
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.0.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "jest": "^26.6.3",
+    "eslint-config-prettier": "^8.3.0",
+    "jest": "^27.0.5",
     "nodemon": "^2.0.7",
-    "prettier": "2.2.1",
+    "prettier": "^2.3.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "@koa/router": "^10.0.0",
     "bcrypt": "^5.0.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
