--- a/package.json
+++ b/package.json
@@ -20,33 +20,30 @@
     "@middlewares": "dist/middlewares"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.3",
-    "@babel/preset-typescript": "^7.18.6",
     "@tsconfig/recommended": "^1.0.1",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.1.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/koa": "^2.13.5",
-    "@types/koa__router": "^8.0.11",
+    "@types/koa__router": "^12.0.0",
     "@types/koa-bodyparser": "^4.3.8",
     "@types/koa-json-error": "^3.1.4",
     "@types/lodash": "^4.14.186",
-    "@types/node": "^14.18.31",
+    "@types/node": "^16.11.66",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "babel-jest": "^27.5.1",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
-    "jest": "^27.5.1",
+    "jest": "^29.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@koa/router": "^10.1.1",
+    "@koa/router": "^12.0.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^10.0.0",
     "joi": "^17.6.2",
